test/tests/compiler/18_structures/valid/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    type1: i32 = 1
    struc1: i32 = 2
    union1: i32 = 3
    import1: i32 = 4
    use1: i32 = 10
    
    return (type1 + struc1 + union1 + import1) - use1
}
